form fixes and alignements for homepage

--- a/css/style.css
+++ b/css/style.css
@@ -555,8 +555,11 @@ button {
 	min-width: 0;
 	color: #fff;
 	background: #3dc0ef;
+	
+	/*
 	padding: 8.5px 20px;
 	font-size: 12px;
+	*/
 	border: none;
 	text-align: center;
 	display: inline-block;
@@ -572,7 +575,12 @@ button {
 	transition: all .15s ease-in;
 	font-weight: 700;
 	font-family: 'Prompt', Helvetica, sans-serif;
-	text-transform: uppercase
+	text-transform: uppercase;
+
+	
+	font-size: large;
+	letter-spacing: .12em;
+	padding: 1em 1.5em;
 }
 
 .btn img,
@@ -987,7 +995,7 @@ footer {
 }
 
 section.hero {
-	text-align: center;
+	/*text-align: center;*/
 	padding-top: 30px;
 	margin: 30px 0
 }
@@ -1958,3 +1966,9 @@ section.stayInTouch {
 	background-color: #fff;
 	color: #3dc0ef;
 }
+
+
+.hero p {
+    font-size: larger;
+}
+
